# todo

./: Cargo.toml  README.md  justfile  todo.norg
.github/: dependabot.yml
migrations/: 20220302132535_todos_table.sql
rust/: Cargo.toml  justfile
rust/migrations/: 20220302132535_todos_table.sql
rust/src/cli/: prompt.rs
rust/src/format/: mod.rs
rust/src/format/table/: mod.rs  tests.rs
rust/src/model/: todo.rs
rust/src/service/: mod.rs
rust/src/service/tests/: mod.rs
src/: error.rs  lib.rs  style.rs  util.rs
src/cli/: app.rs  interaction.rs  mod.rs  prompt.rs
src/format/: card.rs  mod.rs
src/format/table/: col.rs  mod.rs  tests.rs
src/model/: event.rs  link.rs  mod.rs  prio.rs  status.rs  tags.rs  todo.rs
src/repository/: mod.rs
src/service/: changeset.rs  filter.rs  mod.rs
src/service/tests/: add.rs  context.rs  filter.rs  list.rs  mod.rs  remove.rs  update.rs
