[package]
name = "todo"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "todo"
path = "src/bin/todo.rs"

[profile.release]
strip = true

[dependencies]
clap = { version = "4", features = ["cargo"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
home = "0.5"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "migrate", "sqlite" ] }
log = "0.4"
env_logger = "0.10"
crossterm = "0.26"
inquire = "0.6"
rand = "0.8"
